<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="80dip"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/mail"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editMail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:inputType="textEmailAddress" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="80dip"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/mdp"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editMdp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="80dip"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/to"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:inputType="textEmailAddress" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
        android:orientation="horizontal" >
        
        <TextView
            android:layout_width="80dip"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/subject"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editSubject"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:lines="5" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
        android:text="@string/send" />

</LinearLayout>